# claude-code-rs

./: .gitignore  Cargo.toml  README.md  build.sh
.cargo/: config.toml
crates/cc-analytics/: Cargo.toml
crates/cc-analytics/src/: lib.rs
crates/cc-api/: Cargo.toml
crates/cc-api/src/: lib.rs  sse.rs  streaming.rs  types.rs
crates/cc-bridge/: Cargo.toml
crates/cc-bridge/src/: client.rs  config.rs  device_trust.rs  jwt.rs  lib.rs  messaging.rs  session.rs
crates/cc-buddy/: Cargo.toml
crates/cc-buddy/src/: lib.rs
crates/cc-cli/: Cargo.toml
crates/cc-cli/src/: lib.rs
crates/cc-commands/: Cargo.toml
crates/cc-commands/src/: code_commands.rs  config_commands.rs  diag_commands.rs  feature_commands.rs  lib.rs  mcp_commands.rs  misc_commands.rs  new_feature_commands.rs  session_commands.rs
crates/cc-compact/: Cargo.toml
crates/cc-compact/src/: lib.rs
crates/cc-config/: Cargo.toml
crates/cc-config/src/: lib.rs
crates/cc-coordinator/: Cargo.toml
crates/cc-coordinator/src/: coordinator.rs  lib.rs  routing.rs  worker.rs
crates/cc-cost/: Cargo.toml
crates/cc-cost/src/: lib.rs
crates/cc-error/: Cargo.toml
crates/cc-error/src/: lib.rs
crates/cc-hooks/: Cargo.toml
crates/cc-hooks/src/: lib.rs
crates/cc-ide-connect/: Cargo.toml
crates/cc-ide-connect/src/: lib.rs
crates/cc-keybindings/: Cargo.toml
crates/cc-keybindings/src/: lib.rs  parser.rs  resolver.rs
crates/cc-lsp/: Cargo.toml
crates/cc-lsp/src/: config.rs  diagnostics.rs  lib.rs  manager.rs  protocol.rs  server.rs
crates/cc-mcp/: Cargo.toml
crates/cc-mcp/src/: channel.rs  elicitation.rs  lib.rs  manager.rs  permissions.rs  protocol.rs  types.rs
crates/cc-mcp/src/transport/: http.rs  mod.rs  sse.rs  stdio.rs
crates/cc-memory/: Cargo.toml
crates/cc-memory/src/: dream.rs  extraction.rs  lib.rs
crates/cc-messages/: Cargo.toml
crates/cc-messages/src/: lib.rs
crates/cc-migrations/: Cargo.toml
crates/cc-migrations/src/: lib.rs
crates/cc-oauth/: Cargo.toml
crates/cc-oauth/src/: lib.rs
crates/cc-output-styles/: Cargo.toml
crates/cc-output-styles/src/: lib.rs
crates/cc-permissions/: Cargo.toml
crates/cc-permissions/src/: lib.rs
crates/cc-plugins/: Cargo.toml
crates/cc-plugins/src/: lib.rs
crates/cc-proxy/: Cargo.toml
crates/cc-proxy/src/: lib.rs
crates/cc-query/: Cargo.toml
crates/cc-query-engine/: Cargo.toml
crates/cc-query-engine/src/: lib.rs
crates/cc-query/src/: lib.rs  system_prompt.rs  tool_prompts.rs
crates/cc-remote/: Cargo.toml
crates/cc-remote/src/: lib.rs
crates/cc-sdk/: Cargo.toml
crates/cc-sdk/src/: lib.rs
crates/cc-session/: Cargo.toml
crates/cc-session/src/: lib.rs
crates/cc-skills/: Cargo.toml
crates/cc-skills/src/: lib.rs
crates/cc-state/: Cargo.toml
crates/cc-state/src/: lib.rs
crates/cc-tasks/: Cargo.toml
crates/cc-tasks/src/: lib.rs
crates/cc-tools/: Cargo.toml
crates/cc-tools-core/: Cargo.toml
crates/cc-tools-core/src/: lib.rs
crates/cc-tools/src/: agent.rs  ask_user.rs  bash.rs  batch2_tools.rs  brief_tool.rs  config_tool.rs  enter_plan_mode.rs  enter_worktree.rs  exit_plan_mode.rs  exit_worktree.rs  file_edit.rs  file_read.rs  file_write.rs  glob.rs  grep.rs  lib.rs  list_mcp_resources.rs  lsp_tool.rs  mcp_tool.rs  notebook_edit.rs  powershell.rs  read_mcp_resource.rs  repl_tool.rs  schedule_cron.rs  send_message.rs  skill_tool.rs  sleep_tool.rs  synthetic_output.rs  task_create.rs  task_get.rs  task_list.rs  task_output.rs  task_stop.rs  task_update.rs  team_create.rs  team_delete.rs  todo_write.rs  tool_search.rs  web_fetch.rs  web_search.rs
crates/cc-tui/: Cargo.toml
crates/cc-tui/src/: app.rs  event.rs  lib.rs  theme.rs  ui.rs
crates/cc-tui/src/widgets/: message_list.rs  mod.rs  permission_dialog.rs  prompt_input.rs  spinner.rs
crates/cc-types/: Cargo.toml
crates/cc-types/src/: lib.rs
crates/cc-vim/: Cargo.toml
crates/cc-vim/src/: lib.rs
crates/cc-voice/: Cargo.toml
crates/cc-voice/src/: audio.rs  config.rs  keyterms.rs  lib.rs  stt.rs
src/: main.rs
