[package]
name = "cc-commands"
version.workspace = true
edition.workspace = true

[dependencies]
cc-types.workspace = true
cc-error.workspace = true
cc-tools-core.workspace = true
cc-session.workspace = true
cc-config.workspace = true
cc-cost.workspace = true
cc-memory.workspace = true
cc-voice.workspace = true
cc-lsp.workspace = true
cc-keybindings.workspace = true
cc-proxy.workspace = true
cc-migrations.workspace = true
cc-output-styles.workspace = true
cc-ide-connect.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
dirs.workspace = true
chrono.workspace = true
uuid.workspace = true
