[package]
name = "cc-migrations"
version.workspace = true
edition.workspace = true

[dependencies]
cc-types.workspace = true
cc-error.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
dirs.workspace = true
chrono.workspace = true

[dev-dependencies]
tempfile.workspace = true
