[package]
name = "cc-query-engine"
version.workspace = true
edition.workspace = true

[dependencies]
cc-types.workspace = true
cc-error.workspace = true
cc-api.workspace = true
cc-query.workspace = true
cc-tools-core.workspace = true
cc-cost.workspace = true
cc-session.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
uuid.workspace = true
