[package]
name = "cc-query"
version.workspace = true
edition.workspace = true

[dependencies]
cc-types.workspace = true
cc-error.workspace = true
cc-api.workspace = true
cc-tools-core.workspace = true
cc-cost.workspace = true
cc-permissions.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
async-stream.workspace = true
tracing.workspace = true
chrono.workspace = true
