[package]
name = "cc-remote"
version.workspace = true
edition.workspace = true

[dependencies]
cc-types.workspace = true
cc-error.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
reqwest.workspace = true
tokio-tungstenite.workspace = true
uuid.workspace = true
chrono.workspace = true
