[package]
name = "cc-sdk"
version.workspace = true
edition.workspace = true

[dependencies]
cc-types.workspace = true
cc-error.workspace = true
cc-api.workspace = true
cc-query.workspace = true
cc-tools-core.workspace = true
cc-tools.workspace = true
cc-config.workspace = true
cc-permissions.workspace = true
cc-cost.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tracing.workspace = true
