[package]
name = "cc-session"
version.workspace = true
edition.workspace = true

[dependencies]
cc-types.workspace = true
cc-error.workspace = true
cc-api.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
tokio.workspace = true
tracing.workspace = true
dirs.workspace = true
uuid.workspace = true

[dev-dependencies]
tempfile.workspace = true
