[package]
name = "cc-skills"
version.workspace = true
edition.workspace = true

[dependencies]
cc-types.workspace = true
cc-error.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
tokio.workspace = true
tracing.workspace = true
dirs.workspace = true
globset.workspace = true
