[package]
name = "cc-tools-core"
version.workspace = true
edition.workspace = true

[dependencies]
cc-types.workspace = true
cc-error.workspace = true
cc-permissions.workspace = true
serde.workspace = true
serde_json.workspace = true
async-trait.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
async-stream.workspace = true
futures.workspace = true
tracing.workspace = true
