[package]
name = "cc-tools"
version.workspace = true
edition.workspace = true

[dependencies]
cc-types.workspace = true
cc-error.workspace = true
cc-permissions.workspace = true
cc-tools-core.workspace = true
serde.workspace = true
serde_json.workspace = true
async-trait.workspace = true
tokio.workspace = true
tracing.workspace = true
globset.workspace = true
regex.workspace = true
reqwest.workspace = true
