[package]
name = "cc-voice"
version.workspace = true
edition.workspace = true

[dependencies]
cc-types.workspace = true
cc-error.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
async-stream.workspace = true
tracing.workspace = true
reqwest.workspace = true
futures.workspace = true
base64.workspace = true
